# learning

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
app/: main.cpp
notes/: CompilationPipeline.md  DependancyInjectionPattern.md  bit.md  buildSystem.md  container.md  pointers.md  projectsDomain.md
src/adapters/: CMakeLists.txt  Console.cpp  Console.h  ConsoleMock.cpp  ConsoleMock.h
src/application/dtos/: ChangeColorUseCaseDto.h  ContainerDto.h  MaskColorUseCaseDto.h  UseCaseDto.h
src/application/useCases/: CMakeLists.txt  ChangeColorUseCase.cpp  ChangeColorUseCaseSpec.cpp  MaskColorUseCase.cpp  MaskColorUseCase.h  MaskColorUseCaseSpec.cpp  TurnOnAllLEDsUseCase.cpp
src/application/useCases/BitwiseOperators/: AndUseCase.cpp  AndUseCase.h  AndUseCaseSpec.cpp  MaskColorUseCase.cpp  MaskColorUseCase.h  MaskColorUseCaseSpec.cpp  NotUseCase.cpp  NotUseCase.h  NotUseCaseSpec.cpp  OrUseCase.cpp  OrUseCase.h  OrUseCaseSpec.cpp
src/application/useCases/Containers/: ArrayContainerUseCase.cpp  ArrayContainerUseCase.h  VectorUseCase.cpp  VectorUseCase.h
src/domain/: CMakeLists.txt  Color.cpp  Color.h
src/ports/: IConsole.h
